Giant block of code to compute ST.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -345,12 +345,10 @@
 					</table>
 					<div>
 						<div>
-							<span>Swing:</span>
-							<input type="text" name="data.baseDamage.swing" class="baseDamage" value="{{data.baseDamage.swing}}"/>
+							<span>Swing: {{data.baseDamage.swing}}</span>
 						</div>
 						<div>
-							<span>Thrust:</span>
-							<input type="text" name="data.baseDamage.thrust" class="baseDamage" value="{{data.baseDamage.thrust}}"/>
+							<span>Thrust: {{data.baseDamage.thrust}}</span>
 						</div>
 					</div>
 				</div>
