Swing and thrust are now labels instead of input fields

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -345,10 +345,10 @@
 					</table>
 					<div>
 						<div>
-							<span>Swing: {{data.baseDamage.swing}}</span>
+							<span class="bold">Swing:</span> {{data.baseDamage.swing}}
 						</div>
 						<div>
-							<span>Thrust: {{data.baseDamage.thrust}}</span>
+							<span class="bold">Thrust:</span> {{data.baseDamage.thrust}}
 						</div>
 					</div>
 				</div>
