--- a/templates/item/rollable-sheet.html
+++ b/templates/item/rollable-sheet.html
@@ -83,6 +83,10 @@
                     <label class="resource-label">Points</label>
                     <input type="text" name="data.points" value="{{data.points}}" data-dtype="Number"/>
                 </div>
+                <div class="flexrow">
+                    <label class="resource-label">Notes</label>
+                    <input type="text" name="data.shortNotes" value="{{data.shortNotes}}"/>
+                </div>
             </div>
         </div>
     </header>
