--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -192,28 +192,28 @@
 
 				{{!-- Traits Tab --}}
 				<div id="traits" class="tab items" data-tab="traits" data-group="primary">
-						<ol class="items-list">
-								<li class="item flexrow item-header">
-										<div class="item-image"></div>
-										<div class="item-name">Name</div>
-										<div class="item-notes">Notes</div>
-										<div class="item-rolls">Roll</div>
-										<div class="item-points">Points</div>
-										<div class="item-controls"></div>
-								</li>
+						<table class="items-list">
+								<tr class="item item-header">
+										<td class="item-image"></td>
+										<td class="item-name">Name</td>
+										<td class="item-notes">Notes</td>
+										<td class="item-rolls">Roll</td>
+										<td class="item-points">Points</td>
+										<td class="item-controls"></td>
+								</tr>
 								{{#each actor.items as |item id|}}
 								{{#if (eq type "Trait") }}
-								<li class="item flexrow" data-item-id="{{item._id}}">
-									<div class="item-image">
+								<tr class="item" data-item-id="{{item._id}}">
+									<td class="item-image" style="width: 24px; padding: 0 2px">
 										<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-									</div>
-									<div class="item-name">
+									</td>
+									<td class="item-name">
 											{{item.name}}
-									</div>
-									<div class="item-notes">
-											{{data.notes}}
-									</div>
-									<div class="item-skill">
+									</td>
+									<td class="item-notes">
+											{{data.shortNotes}}
+									</td>
+									<td class="item-skill" style="width: 3em;">
 										{{#if (isInt data.level)}}
 											{{#if data.level}}
 												<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
@@ -221,107 +221,103 @@
 												{{data.level}}
 											{{/if}}
 										{{/if}}
-									</div>
-									<div class="item-points">
+									</td>
+									<td class="item-points" style="width: 4em;">
 										<div class="item-notes">
 											{{data.points}}
 										</div>
-									</div>
+									</td>
 
-									<div class="item-controls">
+									<td class="item-controls" style="width: 30px;">
 											<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
 											<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-									</div>
-								</li>
+									</td>
+								</tr>
 								{{/if}}
 								{{/each}}
-						</ol>
+						</table>
 				</div>
 
 			{{!-- Rollable Tab --}}
 			<div id="rollable" class="tab items" data-tab="rollable" data-group="primary">
-				<ol class="items-list">
-					<li class="item flexrow item-header">
-						<div class="item-image"></div>
-						<div class="item-name">Skill</div>
-						<div class="item-notes">Notes</div>
-						<div class="item-points">Points</div>
-						<div class="item-rolls">Skill</div>
-						<div class="item-controls">
+				<table class="items-list">
+					<tr class="item item-header">
+						<td class="item-image"></td>
+						<td class="item-name">Skill</td>
+						<td class="item-notes">Notes</td>
+						<td class="item-points">Points</td>
+						<td class="item-rolls">Skill</td>
+						<td class="item-controls">
 							<!--<a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add</a>-->
-						</div>
-					</li>
+						</td>
+					</tr>
 					{{#each actor.items as |item id|}}
 					{{#if (and (eq type "Rollable") (eq data.category "skill")) }}
-					<li class="item flexrow" data-item-id="{{item._id}}">
-						<div class="item-image">
+					<tr class="item" data-item-id="{{item._id}}">
+						<td class="item-image" style="width: 24px; padding: 0 2px">
 							<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-						</div>
-						<div class="item-name">
+						</td>
+						<td class="item-name">
 							{{item.name}}
-						</div>
-						<div class="item-notes">
-							{{data.notes}}
-						</div>
-						<div class="item-points">
-							<div class="item-notes">
-								{{data.points}}
-							</div>
-						</div>
-						<div class="item-skill">
+						</td>
+						<td class="item-notes">
+							{{data.shortNotes}}
+						</td>
+						<td class="item-points" style="width: 4em;">
+							{{data.points}}
+						</td>
+						<td class="item-skill" style="width: 3em;">
 							<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
 								   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
 							{{data.level}}
-						</div>
-						<div class="item-controls">
+						</td>
+						<td class="item-controls" style="width: 30px;">
 							<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
 							<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-						</div>
-					</li>
+						</td>
+					</tr>
 					{{/if}}
 					{{/each}}
-				</ol>
-				<ol class="items-list">
-					<li class="item flexrow item-header">
-						<div class="item-image"></div>
-						<div class="item-name">Technique</div>
-						<div class="item-notes">Notes</div>
-						<div class="item-points">Points</div>
-						<div class="item-rolls">Skill</div>
-						<div class="item-controls">
+				</table>
+				<table class="items-list">
+					<tr class="item item-header">
+						<td class="item-image"></td>
+						<td class="item-name">Technique</td>
+						<td class="item-notes">Notes</td>
+						<td class="item-points">Points</td>
+						<td class="item-rolls">Skill</td>
+						<td class="item-controls">
 							<!--<a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add</a>-->
-						</div>
-					</li>
+						</td>
+					</tr>
 					{{#each actor.items as |item id|}}
 					{{#if (and (eq type "Rollable") (eq data.category "technique")) }}
-					<li class="item flexrow" data-item-id="{{item._id}}">
-						<div class="item-image">
+					<tr class="item" data-item-id="{{item._id}}">
+						<td class="item-image" style="width: 24px; padding: 0 2px">
 							<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-						</div>
-						<div class="item-name">
+						</td>
+						<td class="item-name">
 							{{item.name}}
-						</div>
-						<div class="item-notes">
-							{{data.notes}}
-						</div>
-						<div class="item-points">
-							<div class="item-notes">
-								{{data.points}}
-							</div>
-						</div>
-						<div class="item-skill">
+						</td>
+						<td class="item-notes">
+							{{data.shortNotes}}
+						</td>
+						<td class="item-points" style="width: 4em;">
+							{{data.points}}
+						</td>
+						<td class="item-skill" style="width: 3em;">
 							<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
 								   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
 							{{data.level}}
-						</div>
-						<div class="item-controls">
+						</td>
+						<td class="item-controls" style="width: 30px;">
 							<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
 							<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-						</div>
-					</li>
+						</td>
+					</tr>
 					{{/if}}
 					{{/each}}
-				</ol>
+				</table>
 			</div>
 
 			{{!-- Combat Tab --}}
