--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -439,54 +439,56 @@
 			{{!-- Items Tab --}}
 			<div id="items" class="tab items" data-tab="items" data-group="primary">
 				{{!-- List of Items --}}
-				<ol class="items-list">
-					<li class="item-row bold">
-						<div class="item-image"></div>
-						<div class="item-name">Name</div>
-						<div class="item-notes">Notes</div>
-						<div class="item-title">TL</div>
-						<div class="item-title">LC</div>
-						<div class="item-title">Qty</div>
-						<div class="item-title">$</div>
-						<div class="item-title">lbs</div>
-						<div class="item-title">Status</div>
-						<div class="item-controls">
+				<table class="items-list">
+					<tr class="bold">
+						<td class="item-image"></td>
+						<td class="item-name">Name</td>
+						<td class="item-notes">Notes</td>
+						<td class="item-title" style="padding-right: 0.2em">TL</td>
+						<td class="item-title" style="padding-right: 0.2em">LC</td>
+						<td class="item-title" style="padding-right: 0.2em">Qty</td>
+						<td class="item-title">$</td>
+						<td class="item-title" style="padding-right: 0.2em">lbs</td>
+						<td class="item-title">Status</td>
+						<td class="item-controls">
 							<!--<a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add</a>-->
-						</div>
-					</li>
+						</td>
+					</tr>
 					{{#each actor.items as |item id|}}
 					{{#if (eq type "Equipment") }}
-					<li class="item-row item" data-item-id="{{item._id}}">
-						<div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24" /></div>
-						<div class="item-name"><span>{{item.name}}</span></div>
-						<div class="item-notes"><span>{{item.data.notes}}</span></div>
-						<div><span>{{item.data.tl}}</span></div>
-						<div><span>{{item.data.lc}}</span></div>
-						<div><span>{{item.data.quantity}}</span></div>
-						<div><span>{{item.data.ttlCost}}</span></div>
-						<div><span>{{item.data.ttlWeight}}</span></div>
-						<div><span>{{item.data.equipStatus}}</span></div>
-						<div class="item-controls">
+					<tr class="item" data-item-id="{{item._id}}">
+						<td class="item-image" style="width: 24px; padding: 0 2px">
+							<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+						</td>
+						<td class="item-name"><span>{{item.name}}</span></td>
+						<td class="item-notes"><span>{{item.data.notes}}</span></td>
+						<td style="width: 1em;"><span>{{item.data.tl}}</span></td>
+						<td style="width: 1em;"><span>{{item.data.lc}}</span></td>
+						<td style="width: 1.5em;"><span>{{item.data.quantity}}</span></td>
+						<td style="width: 1em;"><span>{{item.data.ttlCost}}</span></td>
+						<td style="width: 1.5em;"><span>{{item.data.ttlWeight}}</span></td>
+						<td style="width: 62px;"><span>{{item.data.equipStatus}}</span></td>
+						<td class="item-controls" style="width: 30px;">
 							<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
 							<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-						</div>
-					</li>
+						</td>
+					</tr>
 					{{/if}}
 					{{/each}}
-					<li class="item-row item">
-						<div class="item-image"></div>
-						<div class="item-name"><span></span></div>
-						<div class="item-notes"><span></span></div>
-						<div><span></span></div>
-						<div><span></span></div>
-						<div><span>Total:</span></div>
-						<div><span>{{actor.data.bio.carriedValue}}</span></div>
-						<div><span>{{actor.data.bio.carriedWeight}}</span></div>
-						<div><span></span></div>
-						<div class="item-controls"></div>
-					</li>
+					<tr class="item">
+						<td class="item-image"></td>
+						<td class="item-name"><span></span></td>
+						<td class="item-notes"><span></span></td>
+						<td><span></span></td>
+						<td><span></span></td>
+						<td><span class="bold">Total:</span></td>
+						<td><span>{{actor.data.bio.carriedValue}}</span></td>
+						<td><span>{{actor.data.bio.carriedWeight}}</span></td>
+						<td><span></span></td>
+						<td class="item-controls"></td>
+					</tr>
 
-				</ol>
+				</table>
 			</div>
 		</section>
 	</div>
