Short notes intead of detailed notes are displayed on actor sheet.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -461,7 +461,7 @@
 							<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 						</td>
 						<td class="item-name"><span>{{item.name}}</span></td>
-						<td class="item-notes"><span>{{item.data.notes}}</span></td>
+						<td class="item-notes"><span>{{item.data.shortNotes}}</span></td>
 						<td style="width: 1em;"><span>{{item.data.tl}}</span></td>
 						<td style="width: 1em;"><span>{{item.data.lc}}</span></td>
 						<td style="width: 1.5em;"><span>{{item.data.quantity}}</span></td>
