Fixing spacing for cost and weight of items.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -465,8 +465,8 @@
 						<td style="width: 1em;"><span>{{item.data.tl}}</span></td>
 						<td style="width: 1em;"><span>{{item.data.lc}}</span></td>
 						<td style="width: 1.5em;"><span>{{item.data.quantity}}</span></td>
-						<td style="width: 1em;"><span>{{item.data.ttlCost}}</span></td>
-						<td style="width: 1.5em;"><span>{{item.data.ttlWeight}}</span></td>
+						<td><span>{{item.data.ttlCost}}</span></td>
+						<td><span>{{item.data.ttlWeight}}</span></td>
 						<td style="width: 62px;"><span>{{item.data.equipStatus}}</span></td>
 						<td class="item-controls" style="width: 30px;">
 							<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
@@ -481,7 +481,7 @@
 						<td class="item-notes"><span></span></td>
 						<td><span></span></td>
 						<td><span></span></td>
-						<td><span class="bold">Total:</span></td>
+						<td><span class="bold">Totals:</span></td>
 						<td><span>{{actor.data.bio.carriedValue}}</span></td>
 						<td><span>{{actor.data.bio.carriedWeight}}</span></td>
 						<td><span></span></td>
