Reworked how skills are calculated, including modularization and accounting for defaults. The picture for skills is also placed better.

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -157,6 +157,14 @@
 	min-height: 50px;
 }
 
+.rollable-name {
+	border-collapse: unset;
+	background: unset;
+	border-top: unset;
+	border-bottom: unset;
+	margin: unset;
+}
+
 #racegender {
 	grid-area: racegender;
 	display: grid;
