--- a/templates/item/trait-sheet.html
+++ b/templates/item/trait-sheet.html
@@ -24,6 +24,10 @@
                     <input type="text" name="data.points" value="{{data.points}}" data-dtype="Number"/>
                 </div>
                 <div class="flexrow">
+                    <label class="resource-label">Race / Meta Trait / Etc</label>
+                    <input type="text" name="data.subCategory" value="{{data.subCategory}}" placeholder="Leave this blank if you don't want it categorized"/>
+                </div>
+                <div class="flexrow">
                     <label class="resource-label">Notes</label>
                     <input type="text" name="data.shortNotes" value="{{data.shortNotes}}"/>
                 </div>
