--- a/templates/item/equipment-sheet.html
+++ b/templates/item/equipment-sheet.html
@@ -27,6 +27,10 @@
                         {{/select}}
                     </select>
                 </div>
+                <div id="subCategory" class="flexrow">
+                    <label class="resource-label" style="flex: 0.5;">Race / Meta Trait / Etc:</label>
+                    <input type="text" style="flex: 1;" name="data.subCategory" value="{{data.subCategory}}" placeholder="Leave this blank if you don't want it categorized"/>
+                </div>
                 <div id="value" class="equipmentStatLong">
                     <label class="resource-label">Value:</label>
                     <input type="text" name="data.cost" value="{{data.cost}}" data-dtype="Number"/>
