--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -205,7 +205,7 @@
 									{{#unless (eq category "")}}
 									<tr class="item item-header trait-category-header">
 										<td colspan="6">
-											<a class="accordion" id="accordion-clickable-{{category}}">{{category}}</a>
+											<a class="accordion" id="t-accordion-clickable-{{category}}">{{category}}</a>
 										</td>
 									</tr>
 									{{/unless}}
@@ -459,26 +459,37 @@
 						<td class="item-title">Status</td>
 						<td class="item-controls"></td>
 					</tr>
-					{{#each actor.items as |item id|}}
-					{{#if (eq type "Equipment") }}
-					<tr class="item" data-item-id="{{item._id}}">
-						<td class="item-image" style="width: 24px; padding: 0 2px">
-							<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-						</td>
-						<td class="item-name"><span>{{item.name}}</span></td>
-						<td class="item-notes"><span>{{item.data.shortNotes}}</span></td>
-						<td style="width: 1em;"><span>{{item.data.tl}}</span></td>
-						<td style="width: 1em;"><span>{{item.data.lc}}</span></td>
-						<td style="width: 1.5em;"><span>{{item.data.quantity}}</span></td>
-						<td><span>{{item.data.ttlCost}}</span></td>
-						<td><span>{{item.data.ttlWeight}}</span></td>
-						<td style="width: 62px;"><span>{{item.data.equipStatus}}</span></td>
-						<td class="item-controls" style="width: 30px;">
-							<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-							<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-						</td>
-					</tr>
-					{{/if}}
+					{{#each actor.equipmentCategories as |category cat|}}
+						{{#unless (eq category "")}}
+						<tr class="item item-header trait-category-header">
+							<td colspan="10">
+								<a class="accordion" id="e-accordion-clickable-{{category}}">{{category}}</a>
+							</td>
+						</tr>
+						{{/unless}}
+						{{#each ../actor.items as |item id|}}
+							{{#if (eq type "Equipment") }}
+								{{#if (eq item.data.subCategory category)}}
+									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
+										<td class="item-image" style="width: 24px; padding: 0 2px">
+											<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+										</td>
+										<td class="item-name"><span>{{item.name}}</span></td>
+										<td class="item-notes"><span>{{item.data.shortNotes}}</span></td>
+										<td style="width: 1em;"><span>{{item.data.tl}}</span></td>
+										<td style="width: 1em;"><span>{{item.data.lc}}</span></td>
+										<td style="width: 1.5em;"><span>{{item.data.quantity}}</span></td>
+										<td><span>{{item.data.ttlCost}}</span></td>
+										<td><span>{{item.data.ttlWeight}}</span></td>
+										<td style="width: 62px;"><span>{{item.data.equipStatus}}</span></td>
+										<td class="item-controls" style="width: 30px;">
+											<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+											<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+										</td>
+									</tr>
+								{{/if}}
+							{{/if}}
+						{{/each}}
 					{{/each}}
 					<tr class="item">
 						<td class="item-image"></td>
