--- a/templates/item/rollable-sheet.html
+++ b/templates/item/rollable-sheet.html
@@ -91,6 +91,10 @@
                     <label class="resource-label">Points</label>
                     <input type="text" name="data.points" value="{{data.points}}" data-dtype="Number"/>
                 </div>
+                <div id="subCategory" class="flexrow">
+                    <label class="resource-label">Race / Meta Trait / Etc:</label>
+                    <input type="text" name="data.subCategory" value="{{data.subCategory}}" placeholder="Leave this blank if you don't want it categorized"/>
+                </div>
                 <div class="flexrow">
                     <label class="resource-label">Notes</label>
                     <input type="text" name="data.shortNotes" value="{{data.shortNotes}}"/>
