--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -261,68 +261,31 @@
 						<td class="item-controls"></td>
 					</tr>
 					{{#each actor.items as |item id|}}
-					{{#if (and (eq type "Rollable") (eq data.category "skill")) }}
-					<tr class="item" data-item-id="{{item._id}}">
-						<td class="item-image" style="width: 24px; padding: 0 2px">
-							<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-						</td>
-						<td class="item-name">
-							{{item.name}}
-						</td>
-						<td class="item-notes">
-							{{data.shortNotes}}
-						</td>
-						<td class="item-points" style="width: 4em;">
-							{{data.points}}
-						</td>
-						<td class="item-skill" style="width: 3em;">
-							<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
-								   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
-							{{data.level}}
-						</td>
-						<td class="item-controls" style="width: 30px;">
-							<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-							<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-						</td>
-					</tr>
-					{{/if}}
-					{{/each}}
-				</table>
-				<table class="items-list">
-					<tr class="item item-header">
-						<td class="item-image"></td>
-						<td class="item-name">Technique</td>
-						<td class="item-notes">Notes</td>
-						<td class="item-points">Points</td>
-						<td class="item-rolls">Skill</td>
-						<td class="item-controls"></td>
-					</tr>
-					{{#each actor.items as |item id|}}
-					{{#if (and (eq type "Rollable") (eq data.category "technique")) }}
-					<tr class="item" data-item-id="{{item._id}}">
-						<td class="item-image" style="width: 24px; padding: 0 2px">
-							<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-						</td>
-						<td class="item-name">
-							{{item.name}}
-						</td>
-						<td class="item-notes">
-							{{data.shortNotes}}
-						</td>
-						<td class="item-points" style="width: 4em;">
-							{{data.points}}
-						</td>
-						<td class="item-skill" style="width: 3em;">
-							<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
-								   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
-							{{data.level}}
-						</td>
-						<td class="item-controls" style="width: 30px;">
-							<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-							<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-						</td>
-					</tr>
-					{{/if}}
+						{{#if (eq type "Rollable")}}
+							<tr class="item" data-item-id="{{item._id}}">
+								<td class="item-image" style="width: 24px; padding: 0 2px">
+									<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+								</td>
+								<td class="item-name">
+									{{item.name}}
+								</td>
+								<td class="item-notes">
+									{{data.shortNotes}}
+								</td>
+								<td class="item-points" style="width: 4em;">
+									{{data.points}}
+								</td>
+								<td class="item-skill" style="width: 3em;">
+									<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
+										   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
+									{{data.level}}
+								</td>
+								<td class="item-controls" style="width: 30px;">
+									<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+									<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+								</td>
+							</tr>
+						{{/if}}
 					{{/each}}
 				</table>
 			</div>
