ST now accepts a string instead of numbers only

--- a/templates/item/trait-sheet.html
+++ b/templates/item/trait-sheet.html
@@ -97,7 +97,7 @@
                         <td><input type="text" name="data.melee.{{id}}.damageType" value="{{melee.damageType}}" title="{{melee.damageType}}" style="text-align:left;" /></td>
                         <td><input type="text" name="data.melee.{{id}}.armorDivisor" value="{{melee.armorDivisor}}" title="{{melee.armorDivisor}}" style="text-align:left;" /></td>
                         <td><input type="text" name="data.melee.{{id}}.reach" value="{{melee.reach}}" title="{{melee.reach}}" style="text-align:left;" /></td>
-                        <td><input type="text" name="data.melee.{{id}}.st" value="{{melee.st}}" data-dtype="Number"/></td>
+                        <td><input type="text" name="data.melee.{{id}}.st" value="{{melee.st}}"/></td>
                         <td><a class="attack-delete" id="meleee{{id}}" title="Delete Item"><i class="fas fa-trash"></i></a></td>
                     </tr>
                     {{/each}}
@@ -144,7 +144,7 @@
                         <td><input type="text" name="data.ranged.{{id}}.shots" value="{{ranged.shots}}" title="{{ranged.shots}}" style="text-align:left;" /></td>
                         <td><input type="text" name="data.ranged.{{id}}.bulk" value="{{ranged.bulk}}" title="{{ranged.bulk}}" style="text-align:left;" /></td>
                         <td><input type="text" name="data.ranged.{{id}}.rcl" value="{{ranged.rcl}}" title="{{ranged.rcl}}" style="text-align:left;" /></td>
-                        <td><input type="text" name="data.ranged.{{id}}.st" value="{{ranged.st}}" data-dtype="Number"/></td>
+                        <td><input type="text" name="data.ranged.{{id}}.st" value="{{ranged.st}}"/></td>
                         <td><a class="ranged-delete" id="ranged{{id}}" title="Delete Item"><i class="fas fa-trash"></i></a></td>
                     </tr>
                     {{/each}}
